if get_option('examples')

# Simple Logger Example
example_ = executable(
    'example_simple_logger', 'example_simple_logger.cpp',
    dependencies: loglib_dep
)

# Logger Config Example
example_ = executable(
    'example_logger_config', 'example_logger_config.cpp',
    dependencies: loglib_dep
)

 # Byte Array Example
example_ = executable(
    'example_byte_array', 'example_byte_array.cpp',
    dependencies: loglib_dep
)

 # Logger Manager Example
example_ = executable(
    'example_logger_manager', 'example_logger_manager.cpp',
    dependencies: loglib_dep
)

endif